# mug-bancha

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  lib.rs  main.rs  message.rs  route.rs  service.rs
src/service/: mod.rs  storage.rs
src/service/resource/: echo.rs  mod.rs  mugs.rs
src/service/resource/mugs/: storage.rs
src/service/storage/: test_storage.rs
tests/: mugs.rs
