[package]
name = "mug-bancha"
version = "0.1.0"
authors = ["outfrost"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
futures = "0.1.29"
http = "0.1.19"
hyper = "0.12.35"
rand = "0.7.2"
serde = { version = "~1.0.101", features = ["derive"] }
serde_json = "~1.0.41"
