[package]
name = "mug-bancha"
version = "0.1.1"
authors = ["outfrost"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
http = "0.2.1"
hyper = "0.13.7"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.8.4", features = ["macros"] }
